==> jameswalmsley/bitthunder/arch/arm/mach/lpc17xx/adc.c <==
#include <bitthunder.h>
#include "adc.h"
#include "rcc.h"
#include <collections/bt_fifo.h>

static BT_ERROR adc_setconfig(BT_HANDLE hAdc, BT_ADC_CONFIG *pConfig) {
	volatile LPC17xx_ADC_REGS *pRegs = hAdc->pRegs;
	BT_ERROR Error = BT_ERR_NONE;

	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	BT_u32 ulInputClk = BT_LPC17xx_GetPeripheralClock(g_ADC_PERIPHERAL[pResource->ulStart]);
	BT_u32 ulDivider  = ulInputClk / (pConfig->ulSampleRate * 65);

	if (ulDivider == 0) ulDivider++;

	while ((ulInputClk / ulDivider) > LPC17xx_ADC_MAX_CLOCK) ulDivider++;

	pRegs->ADCR &= ~(0x0000FF00);
	pRegs->ADCR |= (ulDivider - 1) << 8;

	hAdc->ulSWAverageCount = pConfig->ulSWAverageCount;

	pRegs->ADINTEN &= ~LPC17xx_ADC_ADINTEN_ADGINTEN;	// Disable the interrupt

	switch(pConfig->eMode) {
	case BT_UART_MODE_POLLED: {
		if(hAdc->eMode !=  BT_ADC_MODE_POLLED) {

			BT_u32 i;
			for (i = 0; i < 8; i++) {
				BT_CloseHandle(hAdc->hFifo[i]);
			}

			// Disable TX and RX interrupts
			hAdc->eMode = BT_ADC_MODE_POLLED;
		}

		//pRegs->ADINTEN &= ~LPC17xx_ADC_ADINTEN_ADGINTEN;	// Disable the interrupt

		break;
	}

	case BT_UART_MODE_BUFFERED:
	{
		pRegs->ADCR &= ~(0x000000FF);
		pRegs->ADCR	   |= pConfig->ulActiveChannels;
		if(hAdc->eMode != BT_ADC_MODE_BUFFERED) {
			BT_u32 i;
			for (i = 0; i < 8; i++) {
				if(!hAdc->hFifo[i]) {
					hAdc->hFifo[i] = BT_FifoCreate(pConfig->ulBufferSize, 4, BT_FIFO_NONBLOCKING, &Error);
				}
			}
			//pRegs->ADINTEN |= LPC17xx_ADC_ADINTEN_ADGINTEN;	// Enable the interrupt
			for (i = 0; i < 8; i++) {
				if (pConfig->ulActiveChannels & (0x1<<i)) {
					pRegs->ADINTEN = 0x1<<i;	// Enable the interrupt
				}
			}

			hAdc->eMode = BT_ADC_MODE_BUFFERED;
		}
		break;
	}

	default:
		// Unsupported operating mode!
		break;
	}

	return BT_ERR_NONE;
}

static BT_ERROR adc_Read(BT_HANDLE hAdc, BT_u32 ulChannel, BT_u32 ulSize, BT_u32 *pucDest) {
	volatile LPC17xx_ADC_REGS *pRegs = hAdc->pRegs;

	BT_ERROR Error = BT_ERR_NONE;

	switch(hAdc->eMode) {
	case BT_ADC_MODE_POLLED:
	{
		while(ulSize) {
			BT_u32 i;
			BT_u32 ulSum = 0;


			for (i = 0; i < hAdc->ulSWAverageCount; i++) {
				pRegs->ADCR &= 0xFFFFFF00;
				//pRegs->ADCR |= ;
				pRegs->ADCR |= LPC17xx_ADC_ADCR_START_NOW | (LPC17xx_ADC_ADCR_CHANNELSEL << ulChannel);

				while((pRegs->ADGDR & LPC17xx_ADC_ADGDR_DONE)) {
					BT_ThreadYield();
				}
				ulSum += (pRegs->ADGDR >> 4) & 0xFFF;

				pRegs->ADCR &= ~LPC17xx_ADC_ADCR_START_NOW;

			}

			*pucDest++ = ulSum / hAdc->ulSWAverageCount;
			ulSize--;
		}

		break;
	}

	case BT_ADC_MODE_BUFFERED:
	{
		// Get bytes from RX buffer very quickly.
		BT_FifoRead(hAdc->hFifo[ulChannel], ulSize, pucDest, &Error);
		break;
	}

	default:
		// ERR, invalid handle configuration.
		break;
	}
	return BT_ERR_NONE;
}

static void enableAdcPeripheralClock(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_ADC0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableAdcPeripheralClock(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_ADC0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isAdcPeripheralClockEnabled(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_ADC0EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
