==> jameswalmsley/bitthunder/arch/arm/mach/lm3sxx/adc.c <==
#include <bitthunder.h>
#include "adc.h"
#include "rcc.h"
#include <collections/bt_fifo.h>

static BT_ERROR adc_setconfig(BT_HANDLE hAdc, BT_ADC_CONFIG *pConfig) {
	volatile LM3Sxx_ADC_REGS *pRegs = hAdc->pRegs;
	BT_u32 i, j;

	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	BT_s32 slDivider  = (pConfig->ulSampleRate / 125000) - 1;

	if (slDivider < 0) slDivider = 0;
	if (slDivider > 3) slDivider = 3;

	BT_u32 ulShift = (pResource->ulStart + 4) * 2;
	BT_u32 ulMask  = ~(0x3 << ulShift);

	LM3Sxx_RCC->RCGC[0] = (LM3Sxx_RCC->RCGC[0] & ulMask) | (slDivider << ulShift);

	BT_u32 ulAvg = pConfig->ulHWAverageCount;
	if (ulAvg > 64) ulAvg = 64;
	while (ulAvg) {
		pRegs->ADCSAC++;
		ulAvg >>= 1;
	}

	pRegs->ADCCTL = (!pConfig->bUseIntReference) & 0x00000001;

	pRegs->ADCACTSS = 0x0000000F;		// Enable all sequencers

	for (i = 0; i < 3; i++) {
		pRegs->Sequencer[i].SSMUX = 0;
		pRegs->Sequencer[i].SSCTL = 0;
		if (pConfig->eInputMode == BT_ADC_INPUT_MODE_DIFFERENTIAL) {
			for (j = 0; j < 8; j++)
				pRegs->Sequencer[i].SSCTL |= (LM3Sxx_ADC_MUX_SSCTL_DIFF << j*4);
		}
	}
	pRegs->Sequencer[0].SSCTL = LM3Sxx_ADC_MUX_SSCTL_END << 28;
	pRegs->Sequencer[1].SSCTL = LM3Sxx_ADC_MUX_SSCTL_END << 16;
	pRegs->Sequencer[2].SSCTL = LM3Sxx_ADC_MUX_SSCTL_END << 16;
	pRegs->Sequencer[3].SSCTL = LM3Sxx_ADC_MUX_SSCTL_END << 4;

	hAdc->ulSWAverageCount = pConfig->ulSWAverageCount;

	switch(pConfig->eMode) {
	case BT_UART_MODE_POLLED: {
		if(hAdc->eMode !=  BT_ADC_MODE_POLLED) {

			BT_u32 i;
			for (i = 0; i < 8; i++) {
				BT_CloseHandle(hAdc->hFifo[i]);
			}

			hAdc->eMode = BT_ADC_MODE_POLLED;
		}

		//pRegs->ADINTEN &= ~LM3Sxx_ADC_ADINTEN_ADGINTEN;	// Disable the interrupt

		break;
	}

	case BT_UART_MODE_BUFFERED:
	{
		/*pRegs->ADCR &= ~(0x000000FF);
		pRegs->ADCR	   |= pConfig->ulActiveChannels;
		if(hAdc->eMode != BT_ADC_MODE_BUFFERED) {
			BT_u32 i;
			for (i = 0; i < 8; i++) {
				if(!hAdc->hFifo[i]) {
					hAdc->hFifo[i] = BT_FifoCreate(pConfig->ulBufferSize, 4, BT_FIFO_NONBLOCKING, &Error);
				}
			}
			//pRegs->ADINTEN |= LM3Sxx_ADC_ADINTEN_ADGINTEN;	// Enable the interrupt
			for (i = 0; i < 8; i++) {
				if (pConfig->ulActiveChannels & (0x1<<i)) {
					pRegs->ADINTEN = 0x1<<i;	// Enable the interrupt
				}
			}

			hAdc->eMode = BT_ADC_MODE_BUFFERED;
		}*/
		break;
	}

	default:
		// Unsupported operating mode!
		break;
	}

	return BT_ERR_NONE;
}

static BT_s32 adc_Read(BT_HANDLE hAdc, BT_u32 ulChannel, BT_u32 ulSize, BT_u32 *pucDest) {
	volatile LM3Sxx_ADC_REGS *pRegs = hAdc->pRegs;

	BT_ERROR Error = BT_ERR_NONE;
	BT_s32 slRead = 0;

	switch(hAdc->eMode) {
	case BT_ADC_MODE_POLLED:
	{
		while(ulSize) {
			BT_u32 i, j;
			BT_u32 ulSum = 0;
			BT_u32 ulResult;

			for (i = 0; i < hAdc->ulSWAverageCount; i++) {
				if (ulChannel < 8) {
					pRegs->ADCPSSI = LM3Sxx_ADC_ADCPSSI_SS0_START;
					while((pRegs->ADCRIS & LM3Sxx_ADC_ADCRIS_SS0)) {
						BT_ThreadYield();
					}
					for (j = 0; j < ulChannel; j++)
						ulResult = pRegs->Sequencer[0].SSFIFO;
				}
				else if (ulChannel < 12) {
					pRegs->ADCPSSI = LM3Sxx_ADC_ADCPSSI_SS1_START;
					while((pRegs->ADCRIS & LM3Sxx_ADC_ADCRIS_SS1)) {
						BT_ThreadYield();
					}
					for (j = 8; j < ulChannel; j++)
						ulResult = pRegs->Sequencer[1].SSFIFO;
				}
				else if (ulChannel < 16) {
					pRegs->ADCPSSI = LM3Sxx_ADC_ADCPSSI_SS2_START;
					while((pRegs->ADCRIS & LM3Sxx_ADC_ADCRIS_SS2)) {
						BT_ThreadYield();
					}
					for (j = 12; j < ulChannel; j++)
						ulResult = pRegs->Sequencer[2].SSFIFO;
				}
				else {
					pRegs->ADCPSSI = LM3Sxx_ADC_ADCPSSI_SS3_START;
					while((pRegs->ADCRIS & LM3Sxx_ADC_ADCRIS_SS3)) {
						BT_ThreadYield();
					}
					for (j = 16; j < ulChannel; j++)
						ulResult = pRegs->Sequencer[3].SSFIFO;
				}
				ulSum += ulResult;
			}

			*pucDest++ = ulSum / hAdc->ulSWAverageCount;
			ulSize--;
			slRead++;
		}

		break;
	}

	case BT_ADC_MODE_BUFFERED:
	{
		// Get bytes from RX buffer very quickly.
		slRead = BT_FifoRead(hAdc->hFifo[ulChannel], ulSize, pucDest, 0);
		break;
	}

	default:
		// ERR, invalid handle configuration.
		break;
	}
	return slRead;
}

static void enableAdcPeripheralClock(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[0] |= LM3Sxx_RCC_RCGC_ADC0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[0] |= LM3Sxx_RCC_RCGC_ADC1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableAdcPeripheralClock(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[0] &= ~LM3Sxx_RCC_RCGC_ADC0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[0] &= ~LM3Sxx_RCC_RCGC_ADC1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isAdcPeripheralClockEnabled(BT_HANDLE hAdc) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hAdc->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LM3Sxx_RCC->RCGC[0] & LM3Sxx_RCC_RCGC_ADC0EN) {
			return BT_TRUE;
		}
		break;
	}
	case 1: {
		if(LM3Sxx_RCC->RCGC[0] & LM3Sxx_RCC_RCGC_ADC1EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
